worked on template

--- a/HTML/basic_outline.html
+++ b/HTML/basic_outline.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<h1>I'm the body</h1>
+		<h2>TO VIEW THE CODE BEHIND THIS SITE: RIGHT CLICK AND "INSPECT ELEMENT"</h2>
 
 		Most of the stuff you <b>SEE</b> or <i>use</i>.</br><!-- </br> will make a new line -->
 
@@ -21,9 +22,9 @@
 		</div>
 
 		Images can be done 2 ways:
-		<h2>With an external URL:</h2>
+		<h3>With an external URL:</h3>
 		<img src="http://www.gettyimages.ca/gi-resources/images/Homepage/Category-Creative/UK/UK_Creative_462809583.jpg">
-		<h2>Or with a reference:</h2>
-		<img src="">
+		<h3>Or with a reference:</h3>
+		<img src="image.jpg">
 	</body>
 </html>
