--- a/HTML/basic_outline.html
+++ b/HTML/basic_outline.html
@@ -17,14 +17,14 @@
 			Paragraphs are really useful for typing out a lot of stuff. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis leo ultrices, commodo turpis rhoncus, semper tellus. Integer et nisi sollicitudin, cursus dolor nec, viverra risus. Nam interdum justo turpis, sed venenatis mauris tristique in. Ut in ultrices nibh. Proin imperdiet a ipsum at scelerisque. Phasellus ut est cursus, euismod nisl vel, egestas ligula. Fusce purus lectus, placerat venenatis ultricies auctor, ultrices eu est. Sed nulla felis, facilisis sit amet imperdiet at, pretium nec urna. Pellentesque luctus nunc augue, ac dignissim erat efficitur a. Donec ut nulla sollicitudin, iaculis mi sit amet, lobortis nibh. Vivamus vehicula vel felis ac aliquam. Sed maximus diam quis enim varius mollis.
 		</p>
 
-		<div style="background:blue; color:white;">
-			Div's are boxes that you can play around with
+		<div style="background:blue; color:white; width:200px; height:150px;">
+			Div's are boxes that you can play around with. Check my style to see what is going on!
 		</div>
 
-		Images can be done 2 ways:
-		<h3>With an external URL:</h3>
+		<h3>Images can be done 2 ways:</h3>
+		<h4>With an external URL:</h4>
 		<img src="http://www.gettyimages.ca/gi-resources/images/Homepage/Category-Creative/UK/UK_Creative_462809583.jpg">
-		<h3>Or with a reference:</h3>
+		<h4>Or with a reference:</h4>
 		<img src="image.jpg">
 	</body>
 </html>
